Added option to ignore file's metadata name and to not send video file's artwork

--- a/minidlna.conf.5
+++ b/minidlna.conf.5
@@ -179,6 +179,14 @@ By default, wide symlinks are not followed.
 Set to 'no' to disable subtitle support on unknown clients.
 By default, subtitles are enabled for unknown or generic clients.
 
+.IP "\fBvideo_thumbnails\fP"
+Set to 'no' to disable sending artwork form video file's metadata.
+By default, artwork is being sent
+
+.IP "\fBonly_file_names\fP"
+Set to 'yes' to only only consider file's filename when naming it in database.
+By default, if file has a name in metadata it's used instead of filename.
+
 
 
 .SH VERSION
