--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 MiniDLNA project
 (c) 2009 Justin Maggard
 Portions (c) 2006-2007 Thomas Bernard
-webpage: http://sourceforge.net/projects/minidlna/
+webpage: https://github.com/OpenVisionE2/minidlna
 
 This directory contains the MiniDLNA daemon software.
 This software is subject to the conditions detailed in
